Fixed eraser button's spacing issue and added spanish to instructions on page

--- a/our-custom-styles.css
+++ b/our-custom-styles.css
@@ -66,3 +66,11 @@
 .fa-3x{
 	font-size: 9vw;
 }
+
+#eraser-button { /* If this is not here, the eraser button is below where it should be, as if it has a top-margin (but it doesn't) */
+    display: inherit;
+}
+
+.signature-pad--footer {
+    line-height: 1;
+}
